--- a/index.html
+++ b/index.html
@@ -3,11 +3,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/javascript/game.js"></script>
     <title>Document</title>
 </head>
 <body>
 
-    
+        <h1 id="main-header">Crystal Colelctor!</h1>
+
+        <div id="instructions">
+            <h3>You will be given a random number at the start of the game.</h3>
+            <br>
+            <h3>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</h3>
+            <br>
+            <h3>You win the game by matching your total score to random number, you lose the game if your total score goes above random number.</h3>
+            <br>
+            <h3>The value of each crystal is hidden from you until you click on it.</h3>
+            <br>
+            <h3>Each time when the game starts, the game will change the values of each crystal.</h3>
+        </div>
+
+        <div id="computer-number">PLACEHOLDER</div>
+        <div id="wins">PLACEHOLDER</div>
+        <div id="losses">PLACEHOLDER</div>
+        <div class="crystals">
+            <img id="crystal1" src="assets/images/crystal1.png" alt="crystal-1">
+            <img id="crystal2" src="assets/images/crystal2.png" alt="crystal-2">
+            <img id="crystal3" src="assets/images/crystal3.jpg" alt="crystal-3">
+            <img id="crystal4" src="assets/images/crystal4.png" alt="crystal-4">
+
+        </div>
+
+        <h2>Your Total Score Is:</h2>
+
+        <div id="player-score-sum">PLACEHOLDER</div>
+
+
     
 </body>
 </html>
