Main game logic done. Sort out restart bug. Needs CSS styling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>Each time when the game starts, the game will change the values of each crystal.</h3>
         </div>
 
-        <div id="computer-number">PLACEHOLDER</div>
+        <div id="computer-number"></div>
         <div id="wins">PLACEHOLDER</div>
         <div id="losses">PLACEHOLDER</div>
         <div class="crystals">
@@ -37,7 +37,7 @@
 
         <h2>Your Total Score Is:</h2>
 
-        <div id="player-score-sum">PLACEHOLDER</div>
+        <div id="player-score-sum"></div>
 
 
     
