CSS in progress. Still need to fix bug

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="wrap">
 
-        <h1 id="main-header">Crystal Colelctor!</h1>
+        <h1 id="main-header">Crystals Collector!</h1>
 
         <div id="instructions">
             <h3>You will be given a random number at the start of the game.</h3>
@@ -25,8 +26,10 @@
         </div>
 
         <div id="computer-number"></div>
-        <div id="wins">PLACEHOLDER</div>
-        <div id="losses">PLACEHOLDER</div>
+        <div id="winsandlosses">
+            <div id="wins"></div>
+            <div id="losses"></div>
+        </div>
         <div class="crystals">
             <img id="crystal1" src="assets/images/crystal1.png" alt="crystal-1">
             <img id="crystal2" src="assets/images/crystal2.png" alt="crystal-2">
@@ -38,6 +41,8 @@
         <h2>Your Total Score Is:</h2>
 
         <div id="player-score-sum"></div>
+
+    </div>
 
 
     
