More CSS changes. Basic layout set. Change background image, crystal images, background/text colors. Then tackle bug

--- a/index.html
+++ b/index.html
@@ -13,34 +13,42 @@
 
         <h1 id="main-header">Crystals Collector!</h1>
 
-        <div id="instructions">
-            <h3>You will be given a random number at the start of the game.</h3>
-            <br>
-            <h3>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</h3>
-            <br>
-            <h3>You win the game by matching your total score to random number, you lose the game if your total score goes above random number.</h3>
-            <br>
-            <h3>The value of each crystal is hidden from you until you click on it.</h3>
-            <br>
-            <h3>Each time when the game starts, the game will change the values of each crystal.</h3>
+        <div class="row-area1">
+            <div id="instructions">
+                <h3>You will be given a random number at the start of the game.</h3>
+                <br>
+                <h3>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</h3>
+                <br>
+                <h3>You win the game by matching your total score to random number, you lose the game if your total score goes above random number.</h3>
+                <br>
+                <h3>The value of each crystal is hidden from you until you click on it.</h3>
+                <br>
+                <h3>Each time when the game starts, the game will change the values of each crystal.</h3>
+            </div>
+
+            <div id="computer-number"></div>
+            <div id="winsandlosses">
+                <div id="wins"></div>
+                <br>
+                <div id="losses"></div>
+            </div>
         </div>
 
-        <div id="computer-number"></div>
-        <div id="winsandlosses">
-            <div id="wins"></div>
-            <div id="losses"></div>
+        <div class="row-area2">
+            <div class="crystals">
+                <img id="crystal1" src="assets/images/crystal1.png" alt="crystal-1">
+                <img id="crystal2" src="assets/images/crystal2.png" alt="crystal-2">
+                <img id="crystal3" src="assets/images/crystal3.jpg" alt="crystal-3">
+                <img id="crystal4" src="assets/images/crystal4.png" alt="crystal-4">
+
+            </div>
+            
+            <div id="total-score-letters">
+                <h2>Your Total Score Is:</h2>
+            </div>
+
+            <div id="player-score-sum"></div>
         </div>
-        <div class="crystals">
-            <img id="crystal1" src="assets/images/crystal1.png" alt="crystal-1">
-            <img id="crystal2" src="assets/images/crystal2.png" alt="crystal-2">
-            <img id="crystal3" src="assets/images/crystal3.jpg" alt="crystal-3">
-            <img id="crystal4" src="assets/images/crystal4.png" alt="crystal-4">
-
-        </div>
-
-        <h2>Your Total Score Is:</h2>
-
-        <div id="player-score-sum"></div>
 
     </div>
 
